# visual_coslam

./: CMakeLists.txt  README.md  package.xml
cmake/Modules/: FindCG.cmake  FindVisualSLAM.cmake
include/app/: SL_SingleSLAM.h
include/gui/: MyApp.h
include/redis/: PosVelKF.h  cbredisclient.h
include/tracking/: BriefExtractor.h  CVKLTTracker.h  SL_FeatureTracker.h  generated_32.i
launch/: ar_tracker.launch  coslam_2cam.launch  test_ar.launch  two_bebops.launch
src/: feature_receiver.cpp
src/app/: APP_ROSMain_features.cpp  SL_CoSLAM.cpp  SL_CoSLAMBA.cpp  SL_CoSLAMRobustBA.cpp  SL_GlobParam.cpp  SL_InitMap.cpp  SL_InterCamPoseEstimator.cpp  SL_MergeCameraGroup.cpp  SL_NewMapPointsInterCam.cpp  SL_Relocalization.cpp  SL_SingleSLAM.cpp
src/gui/: CoSLAMThread.cpp  GLHelper.cpp  GLImagePane.cpp  GLImageWnd.cpp  GLScenePane.cpp  GLScenePaneHelper.cpp  GLSceneWnd.cpp  GLTrackballPane.cpp  MainDialog.cpp  MyApp.cpp  trackball.cpp
src/redis/: PosVelKF.cpp
src/slam/: SL_Camera.cpp  SL_CoSLAMHelper.cpp  SL_FeatureMatching.cpp  SL_FeaturePoint.cpp  SL_FeaturePoints.cpp  SL_GlobalPoseEstimation.cpp  SL_InitMapHelper.cpp  SL_IntraCamPose.cpp  SL_IntraCamPoseEstimator.cpp  SL_KeyPoseList.cpp  SL_MapPoint.cpp  SL_MapPointList.cpp  SL_NCCBlock.cpp  SL_SLAMHelper.cpp  SL_SolvePnP.cpp
src/tracking/: BriefExtractor.cpp  CVKLTTracker.cpp  CoSL_FeatureTracker.cpp  GPUKLT.cpp  SL_Track2D.cpp
src/video_reader/: VR_AVIReader.cpp  VR_ROSReader.cpp  VR_USBCamReader.cpp
